[chore] fixing tests + added UseChat and UseCompletion